--- a/404.html
+++ b/404.html
@@ -160,7 +160,7 @@
 
       <footer id='footer' class='footer'>
         <div class='container sep-before'><div class='copyright'>
-  <p> &copy; 2019 Gaurav </p>
+  <p> &copy; 2019 SpareSlant </p>
 </div>
 
         </div>
